syntax = "proto3";

package kmrpb;

service Compute {
    rpc ConfigMapper(stream KV) returns (ConfigResponse) {}
    rpc Map(stream KV) returns (stream KV) {}
    rpc ConfigReducer(stream KV) returns (ConfigResponse) {}
    rpc Reduce(stream KV) returns (stream KV) {}
}

message KV {
    bytes key = 1;
    bytes value = 2;
}
message ConfigResponse {
  int32 retcode = 1;
}
